<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:onClick="clickBack"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="Settings" />

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/merchant_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idSetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Nazov obchodu" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/ico"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idSetICO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="number"
                android:text="123456798" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/street_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idSetStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Nazov ulice" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/street_number"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idSetStreetNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="number"
                android:text="123" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/city_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idSetCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Nazov Mesta" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/psc"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idSetPSC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="number"
                android:text="01234" />

            <Button
                android:id="@+id/btnSaveSettings"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="buttonSave"
                android:text="@string/save"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>